--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <button onclick="pickCategory('SUKAN')">⚽ SUKAN</button>
             <button onclick="pickCategory('BENDA')">📦 BENDA</button>
         </div>
+        
+        <p style="font-size: 0.85rem; color: #666; margin-top: 10px; text-align: center;">
+            <i>Cara bermain: Klik setiap huruf dari huruf pertama hingga akhir untuk pilih perkataan.</i>
+        </p>
 
         <div class="custom-section">
             <p>Atau buat senarai sendiri:</p>
