--- a/game.html
+++ b/game.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Cari Kata Pro - Bermain</title>
+    <title>Cari Kata Pro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="debug.css"> 
 </head>
 <body>
+
+    <div id="debugPanel">
+        <div id="dbgWords">WDS: 0</div>
+        <div id="dbgCross">CRS: 0</div>
+        <div id="dbgRetry">TRY: 0</div>
+        <button class="btn-skip" onclick="skipLevel()">SKIP</button>
+    </div>
 
     <div id="loading-screen" class="screen">
         <div class="loader"></div>
@@ -15,40 +23,27 @@
     </div>
 
     <div id="game-screen" class="screen hidden">
-        
         <div class="side-panel">
             <div class="game-header">
                 <div class="top-bar">
                     <button class="btn-small" onclick="window.location.href='index.html'">🏠</button>
-                    
-                    <div id="toast-msg">Mata tidak cukup! (Perlu 4 mata)</div>
-
+                    <div id="toast-msg">Mata tidak cukup!</div>
                     <div class="stats-bar">
                         <span id="score-display">0</span>
                         <div id="current-cat-display">KATEGORI</div>
                     </div>
-
                     <button class="btn-hint" onclick="useHint()">💡</button>
                 </div>
             </div>
-
             <ul id="word-list"></ul>
         </div>
-
         <div id="grid-container"></div>
-
-        <div id="debugPanel">
-            <div id="dbgWords"></div>
-            <div id="dbgCross"></div>
-            <div id="dbgRetry"></div>
-        </div>
     </div>
 
     <div id="custom-modal">
         <div class="modal-content">
             <div class="modal-icon">🌟</div>
             <h2>TERBAIK!</h2>
-            <p>Anda berjaya menyelesaikan grid ini dengan cemerlang!</p>
             <button class="btn-next" onclick="closeModal()">GRID SETERUSNYA</button>
         </div>
     </div>
@@ -56,5 +51,6 @@
     <script src="words.js"></script>
     <script src="sound.js"></script>
     <script src="game.js"></script>
+    <script src="debug.js"></script>
 </body>
 </html>
