--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
         <div id="dbgWords">WDS: 0</div>
         <div id="dbgCross">CRS: 0</div>
         <div id="dbgRetry">TRY: 0</div>
-        <button class="btn-skip" onclick="skipLevel()">SKIP</button>
+        <div id="dbgDup">DUP: 0</div> <button class="btn-skip" onclick="skipLevel()">SKIP</button>
     </div>
 
     <div id="loading-screen" class="screen">
