--- a/game.html
+++ b/game.html
@@ -44,7 +44,12 @@
         <div class="modal-content">
             <div class="modal-icon">🌟</div>
             <h2>TERBAIK!</h2>
-            <button class="btn-next" onclick="closeModal()">GRID SETERUSNYA</button>
+            <p>Anda berjaya menyelesaikan grid ini!</p>
+            
+            <div class="modal-buttons">
+                <button class="btn-next" onclick="closeModal()">GRID SETERUSNYA</button>
+                <button class="btn-menu" onclick="window.location.href='index.html'">MENU UTAMA</button>
+            </div>
         </div>
     </div>
 
