--- a/game.html
+++ b/game.html
@@ -19,9 +19,12 @@
 
     <div id="game-container">
         <header id="game-header">
-            <div class="header-left">
+            <div class="header-left" style="display: flex; gap: 5px;">
                 <button onclick="window.location.href='index.html'" class="btn-home">
                     <i class="fas fa-home"></i>
+                </button>
+                <button onclick="Tutorial.show()" class="btn-home" style="background: #00acc1;">
+                    <i class="fas fa-question"></i>
                 </button>
             </div>
 
@@ -36,9 +39,6 @@
                         <span id="timer" class="value">00:00</span>
                     </div>
                 </div>
-                <div class="category-display">
-                    <span id="category-title">MEMUATKAN...</span>
-                </div>
             </div>
 
             <div class="header-right">
@@ -49,7 +49,19 @@
             </div>
         </header>
 
-        <section id="word-list-area">
+        <div id="player-bar" style="display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.8); margin: 5px 15px; padding: 6px 15px; border-radius: 50px; border: 2px solid #00acc1; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+            <img id="user-avatar" src="" alt="Avatar" style="width: 30px; height: 30px; border-radius: 50%; background: #e0f7fa; margin-right: 10px; border: 2px solid #00acc1; object-fit: cover;">
+            
+            <span id="display-username" style="font-family: 'Fredoka One', cursive; color: #333; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 1px;">
+                Pemain...
+            </span>
+        </div>
+
+        <section id="word-list-area" style="position: relative; margin-top: 15px; padding-top: 20px;">
+            <div id="category-tag" style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: #ff9800; color: white; padding: 4px 18px; border-radius: 20px; font-size: 0.75rem; font-family: 'Fredoka One', cursive; box-shadow: 0 4px #e65100; z-index: 10; white-space: nowrap; border: 2px solid white;">
+                <span id="category-title">MEMUATKAN...</span>
+            </div>
+            
             <div id="word-list" class="word-list-items"></div>
         </section>
 
@@ -67,7 +79,8 @@
     <script src="j_interaction.js"></script> 
     <script src="j_timer.js"></script>
     <script src="j_score.js"></script>
-    <script src="j_modal.js"></script> 
+    <script src="j_modal.js"></script>
+    <script src="j_tuto.js"></script> 
     <script src="j_debug.js"></script> 
     <script src="j_hint.js"></script> 
     <script src="j_game.js"></script>
