--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="c_modal.css">
     <link rel="stylesheet" href="c_debug.css"> 
     <link rel="stylesheet" href="c_hint.css">
+    <link rel="stylesheet" href="c_bonus.css">
 </head>
 <body class="game-body">
 
@@ -38,6 +39,10 @@
                         <span class="label">MASA</span>
                         <span id="timer" class="value">00:00</span>
                     </div>
+                </div>
+                
+                <div class="combo-bar-container">
+                    <div class="combo-bar-fill"></div>
                 </div>
             </div>
 
@@ -78,7 +83,7 @@
     <script src="j_grid.js"></script>      
     <script src="j_interaction.js"></script> 
     <script src="j_timer.js"></script>
-    <script src="j_score.js"></script>
+    <script src="j_bonus.js"></script> <script src="j_score.js"></script>
     <script src="j_modal.js"></script>
     <script src="j_tuto.js"></script> 
     <script src="j_debug.js"></script> 
